--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,11 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   go_router: ^14.8.1
 
+  firebase_auth: ^5.5.0
+  google_sign_in: ^6.3.0
+
+  google_fonts: ^6.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -31,4 +36,6 @@ dev_dependencies:
   json_serializable: ^6.9.0
 
 flutter:
-uses-material-design: true>
+  uses-material-design: true
+  assets:
+    - .env
