--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   go_router: ^14.8.1
 
+  firebase_core: ^3.0.0
   firebase_auth: ^5.5.0
   google_sign_in: ^6.3.0
 
