--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   firebase_auth: ^5.5.0
   google_sign_in: ^6.3.0
 
+  firebase_storage: ^12.4.5
+  image_picker: ^1.0.4
+  path: ^1.8.3
+
   google_fonts: ^6.2.1
 
   lottie: ^2.7.0
