--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,12 +33,15 @@ dependencies:
 
   lottie: ^2.7.0
   http: ^1.0.0
+  http_parser: ^4.0.2
   cached_network_image: ^3.3.0
   web_socket_channel: ^2.4.0
 
   flutter_sound: ^9.2.13
   permission_handler: ^11.3.0
   audioplayers: ^5.2.1
+  path_provider: ^2.1.1
+  just_audio: ^0.9.34
 
 dev_dependencies:
   flutter_test:
